<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VANTAGE\nVT RCU</string>
    <string name="menu_settings">Settings</string>
    <string name="test">das ist ein test</string>
    <string name="test_2">kein update</string>
    <string name="test3">noch ein test für das Update</string>
    <string name="test4">noch einmal</string>
    <string name="button">Button</string>
    <string name="hoch">hoch</string>
    <string name="runter">runter</string>
    <string name="links">links</string>
    <string name="rechts">rechts</string>
    <string name="epg">epg</string>
    <string name="record"></string>
    <string name="Settings">Settings</string>
    <string name="ip_adresse">IP Adresse</string>
    <string name="port">Port</string>
    <string name="pref_ip"></string>
    <string name="laden">Laden</string>
    <string name="IP_Geladen">ip</string>
    <string name="btn_back">Zurück</string>
    <string name="btn_save">Speichern</string>
    <string name="port_ausgabe" />
    <string name="main">Main</string>
    <string name="numbers">Ziffern 0-9</string>
    <string name="nb_1">1</string>
    <string name="nb_2">2</string>
    <string name="nb_3">3</string>
    <string name="nb_4">4</string>
    <string name="nb_5">5</string>
    <string name="nb_6">6</string>
    <string name="nb_7">7</string>
    <string name="nb_8">8</string>
    <string name="nb_9">9</string>
    <string name="nb_0">0</string>
    <string name="Last">Last</string>
    <string name="mute">mute</string>
    <string name="alert_title">IP Adresse eingeben</string>
    <string name="alert_message">Bitte geben Sie die IP-Adresse\ndes VANTAGE Receivers ein.\n\nDiese finden Sie unter\nMenü/Multimedia/Netzwerk</string>
    <string name="action_settings">ActionSettings</string>
    <string name="action_settings_title">action Settings Title</string>
    <string name="btn_red">IP</string>
    <string name="btn_portal">Portal</string>
    <string name="btn_ok" />
    <string name="btn_option">Option</string>
    <string name="btn_info">Info</string>
    <string name="btn_menu">MENU</string>
    <string name="btn_back1">Back</string>
    <string name="btn_guide">Guide</string>
    <string name="btn_fav">FAV</string>
    <string name="btn_help">Help</string>
    <string name="btn_last">Last</string>
    <string name="btn_record" />
    <string name="btn_stop" />
    <string name="btn_player" />
    <string name="btn_rew" />
    <string name="btn_ff" />
    <string name="btn_play">&gt;/||</string>
    <string name="btn_green">Sleep</string>
    <string name="btn_yellow">Audio</string>
    <string name="btn_blue">List</string>
    <string name="btn_mute">Mute</string>
    <string name="title_activity_layout_test">LayoutTest</string>

</resources>