<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#313131"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/selector_bt_numbers"
        android:onClick="backClick"
        android:text="@string/main"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txt_ip_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/ip_adresse"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/txtf_ip_adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="phone"
        android:onClick="txtfClick"
        android:text="@string/pref_ip"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txt_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="35dp"
        android:text="@string/port"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/txtf_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/port_ausgabe"
        android:textColor="#ffffff" />

</LinearLayout>