<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_numbers1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#313131"
    android:minHeight="30dp"
    android:onClick="onButtonClick"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_numbers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:background="@drawable/selector_bt_numbers"
        android:height="30dp"
        android:onClick="onButtonClick"
        android:text="@string/numbers"
        android:textColor="#ffffff" />

    <LinearLayout
        android:id="@+id/colorbuttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:minHeight="50dp" >

        <Button
            android:id="@+id/btn_red"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_red"
            android:onClick="onButtonClick"
            android:text="@string/btn_red"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_green"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_green"
            android:onClick="onButtonClick"
            android:text="@string/btn_green"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_yellow"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_yellow"
            android:onClick="onButtonClick"
            android:text="@string/btn_yellow"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_blue"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_blue"
            android:onClick="onButtonClick"
            android:text="@string/btn_blue"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/erstereihe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_option"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_option"
            android:onClick="onButtonClick"
            android:text="@string/btn_option"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_hoch"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_navi_ok"
            android:minHeight="24dp"
            android:minWidth="32dp"
            android:onClick="onButtonClick"
            android:paddingTop="15dp"
            android:textColor="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/btn_info"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_info"
            android:minHeight="24dp"
            android:minWidth="32dp"
            android:onClick="onButtonClick"
            android:text="@string/btn_info"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_links"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_left"
            android:onClick="onButtonClick"
            android:textColor="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_ok"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/btn_rechts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_right"
            android:onClick="onButtonClick"
            android:textColor="@android:color/holo_blue_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/unterereihe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btn_menu"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_menu"
            android:onClick="onButtonClick"
            android:text="@string/btn_menu"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_runter"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_down"
            android:onClick="onButtonClick"
            android:textColor="@android:color/holo_blue_light" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_back"
            android:onClick="onButtonClick"
            android:text="@string/btn_back1"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="3" >

        <Button
            android:id="@+id/btn_fav"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_numbers"
            android:onClick="onButtonClick"
            android:text="@string/btn_fav"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_guide"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="0.7"
            android:background="@drawable/selector_bt_numbers"
            android:onClick="onButtonClick"
            android:text="@string/btn_guide"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_numbers"
            android:onClick="onButtonClick"
            android:text="@string/btn_help"
            android:textColor="#ffffff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pvr1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1.5" >

        <Button
            android:id="@+id/btn_record"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_record"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_stopp"
            android:onClick="onButtonClick"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_player"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_mediaplayer"
            android:onClick="onButtonClick" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pvr2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1.5" >

        <Button
            android:id="@+id/btn_rew"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_rewind"
            android:onClick="onButtonClick" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_play"
            android:onClick="onButtonClick"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_ff"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_ff"
            android:onClick="onButtonClick" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/portal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="10dp"
        android:layout_weight="2" >

        <Button
            android:id="@+id/btn_mute"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_numbers"
            android:onClick="onButtonClick"
            android:text="@string/btn_mute"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_portal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_numbers"
            android:drawablePadding="1dp"
            android:onClick="onButtonClick"
            android:text="@string/btn_portal"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btn_last"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/selector_bt_numbers"
            android:onClick="onButtonClick"
            android:text="@string/btn_last"
            android:textColor="#ffffff" />

    </LinearLayout>

</LinearLayout>